--- a/landing.html
+++ b/landing.html
@@ -13,14 +13,17 @@
 
 <body class="d-flex justify-content-center align-items-center">
     <div class="container m-0 p-0 d-flex flex-column justify-content-between">
+         <!-- Logo container -->
         <div class="logo-container mt-85">
             <img class="logo" src="./images/logo.png" alt="Math Genius" />
         </div>
+          <!-- Button container -->
         <div class="button-container d-flex flex-column justify-content-center align-items-center gap-3">
             <a href="login.html" class="btn-custom d-flex align-items-center justify-content-center">Login</a>
             <a href="register.html" class="btn-custom  d-flex align-items-center justify-content-center">Register</a>
             <a href="main-menu.html" class="guest-text">Or click here to go for FREE!!</a>
         </div>
+            <!-- Footer section -->
         <div class="footer">
             <img class="kids-image" src="./images/kids.png" />
             <div class="footer-text-container d-flex flex-column justify-content-center">
