--- a/main-menu.html
+++ b/main-menu.html
@@ -17,10 +17,15 @@
         <div class="header-container d-flex justify-content-center align-items-center flex-row fs-64">
             Menu
         </div>
+           <!-- Button container -->
         <div class="button-container d-flex flex-column justify-content-evenly justify-content-center align-items-center">
+             <!-- Button learn a count -->
             <a href="learn-count.html" class="btn-custom d-flex align-items-center justify-content-center">Learn Count</a>
+             <!-- Button Finger counting -->
             <a href="finger-counting.html" class="btn-custom  d-flex align-items-center justify-content-center">Finger Counting</a>
+             <!-- Button pair matching -->
             <a href="pair-matching.html" class="btn-custom d-flex align-items-center justify-content-center">Pair Matching</a>
+             <!-- Button odd option out -->
             <a href="odd-option-out.html" class="btn-custom  d-flex align-items-center justify-content-center">Odd Option Out</a>
         </div>
         <div class="footer-container h-87 d-flex justify-content-center align-items-end flex-column">
