--- a/learn-count.html
+++ b/learn-count.html
@@ -6,62 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Math Genuis App</title>
+     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- Custom CSS -->
     <link href="style.css" rel="stylesheet">
+     <!-- jQuery -->
     <script
     src="https://code.jquery.com/jquery-3.7.0.min.js"
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
     crossorigin="anonymous"></script>
+      <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+        <!-- Vue.js -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
 <body class="d-flex justify-content-center align-items-center" id="app">
     <div class="container m-0 p-0 d-flex flex-column justify-content-between">
+         <!-- Header -->
         <div class="header-container d-flex justify-content-center align-items-center h-97 flex-row fs-36">
             Count 1-5
         </div>
         <div class="content">
             <div class="d-flex flex-column justify-content-between">
+                  <!-- Loop through countingArray -->
                     <div class="d-flex flex-row align-items-end" v-for="(c,index) in countingArray">
                         <div class="count-item-text">
+                              <!-- Display number image and word -->
                             <img v-bind:src="`./images/${c.numberImage}`" v-bind:class="c.counted ? 'opacity-40' : 'opacity-100'" />
                             <div class="count-word" v-bind:class="c.counted ? 'opacity-40' : 'opacity-100'">{{c.number}}</div>
                         </div>
+                       <!-- Loop through apples -->
                             <div  v-for="(apple,index2) in c.apples" class="flex-1 apple-image" style="cursor:pointer;" v-on:click="markAsCounted(apple,c)">
+                                <!-- Display apple image with conditional opacity class -->
                                 <img v-if="index2 == 0 && index == 0" v-bind:src="`./images/${apple.image}`" v-bind:class="apple.counted ? 'opacity-40' : 'opacity-100'" />
                                 <img v-else v-bind:src="`./images/${apple.image}`" v-bind:class="apple.counted ? 'opacity-40' : 'opacity-100'" :height="apple.heigth" :width="apple.width" />
                             </div>    
                     </div>    
             </div>
         </div>
-      
+       <!-- Footer -->
         <div class="footer-container h-87 d-flex justify-content-center align-items-end flex-column">
             <a href="learn-count2.html?status=u"><img src="./images/arrow.png" class="mr-15" height="80" width="80" /></a>
         </div>
 
     </div>
-    <div class="modal" id="msg-modal" tabindex="-1">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-      </div>
+
     <script>
+          // Array of counting data
         var array = [
                         {
                             numberImage : "1.png",
@@ -119,6 +114,8 @@
     //     window.location.replace("https://www.tutorialrepublic.com/");
     // }      
     // setTimeout("pageRedirect()", 10000);
+
+    // create a new Vue instance
          var app = Vue.createApp({
             data() {
                 return {
@@ -129,6 +126,7 @@
                
             },
             methods : {
+                  // Mark an apple as counted
                 markAsCounted(c,p){
                     c.counted = true;
                     if(p.apples.filter(m => m.counted).length == p.apples.length){
