--- a/learn-count2.html
+++ b/learn-count2.html
@@ -6,33 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Math Genuis App</title>
+     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+         <!-- Custom CSS -->
     <link href="style.css" rel="stylesheet">
+     <!-- jQuery -->
     <script
   src="https://code.jquery.com/jquery-3.7.0.min.js"
   integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
   crossorigin="anonymous"></script>
+    <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
   crossorigin="anonymous"></script>
+    <!-- Vue.js -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
 <body class="d-flex justify-content-center align-items-center" id="app">
     <div class="container m-0 p-0 d-flex flex-column justify-content-between">
+          <!-- Header -->
         <div class="header-container d-flex justify-content-center align-items-center h-97 flex-row fs-36">
             Count 6-10
         </div>
         <div class="content">
             <div class="d-flex flex-column justify-content-between">
+                 <!-- Loop through countingArray -->
                 <div class="d-flex flex-row align-items-end" v-for="(c,index) in countingArray">
                     <div class="count-item-text">
+                         <!-- Display number image and word -->
                         <img v-bind:src="`./images/${c.numberImage}`" v-bind:class="c.counted ? 'opacity-40' : 'opacity-100'" />
                         <div class="count-word" v-bind:class="c.counted ? 'opacity-40' : 'opacity-100'">{{c.number}}</div>
                     </div>
+                      <!-- Loop through apples -->
                     <div class="flex-1 apple-image text-start">
                         <template v-for="(apple,index2) in c.apples">
+                             <!-- Display the apple image and handle the click event -->
                             <img v-bind:src="`./images/${apple.image}`" style="cursor: pointer;"
                             v-bind:class="apple.counted ? 'opacity-40' : 'opacity-100'" :height="apple.heigth"
                             :width="apple.width" v-on:click="markAsCounted(apple,c)" />
@@ -43,6 +53,7 @@
         </div>
 
         <div class="footer-container h-87 d-flex justify-content-center align-items-end flex-column">
+               <!-- Display a link to the main menu -->
             <a href="main-menu.html"><img class="menu-image" src="./images/menu.png" /></a>
         </div>
 
@@ -147,35 +158,37 @@
         var app = Vue.createApp({
             data() {
                 return {
-                    countingArray: array,
-                    previousStatus : false, 
+                    countingArray: array, // Array containing the counting data
+                    previousStatus : false, // Flag to track the previous status
                 }
             },
             created(){
-                        var arr = $(location).attr('href').split('?');
-                        var param = arr[1];
-                        var paramVal = param.split('=')[1];
-                        this.previousStatus = paramVal;
+                        var arr = $(location).attr('href').split('?'); // Get the URL and split it at the "?" symbol
+                        var param = arr[1];  // Get the query parameter
+                        var paramVal = param.split('=')[1]; // Extract the value of the query parameter
+                        this.previousStatus = paramVal; // Assign the value to the previousStatus property
             },
             methods: {
                 markAsCounted(c, p) {
-                    c.counted = true;
+                    c.counted = true; // Mark the clicked apple as counted
                     if (p.apples.filter(m => m.counted).length == p.apples.length) {
-                        p.counted = true;
+                        p.counted = true; // If all apples in a group are counted, mark the number as counted
                     }
                     if (this.countingArray.filter(m => m.counted).length == this.countingArray.length && this.previousStatus) {
                        // alert('Game Compeleted');
-                        $('#msg-modal').modal('show');
+                        // If all numbers and apples are counted and there is a previous status
+                        $('#msg-modal').modal('show');// Display a modal dialog indicating completion
                     }
                 },
                 moveToMainMenu() {
-          var arr = $(location).attr('href').split('/');
-          var toReplace = arr[arr.length - 1];
+          var arr = $(location).attr('href').split('/'); // Split the URL at "/"
+          var toReplace = arr[arr.length - 1]; // Get the last part of the URL
           console.log(toReplace);
           var newURL = $(location).attr('href').replace(toReplace, 'main-menu.html') + '?status=c';
+          // Replace the last part of the URL with 'main-menu.html' and add a query parameter 'status=c'
           console.log(newURL);
-          $('#msg-modal').modal('hide');
-          window.location.replace(newURL);
+          $('#msg-modal').modal('hide');  // Hide the completion modal
+          window.location.replace(newURL); // Redirect to the new URL
         }
             }
         }).mount('#app');
